[gd_scene load_steps=6 format=3 uid="uid://5nym0skc4fea"]

[ext_resource type="FontFile" uid="uid://cfachjkk2umhy" path="res://resources/fonts/Helvetica Black Condensed.otf" id="1_nnrk0"]
[ext_resource type="Script" path="res://menu/leaderboard/leaderboard.gd" id="1_u3i5j"]
[ext_resource type="Texture2D" uid="uid://c5e84squw6xk" path="res://resources/buttons/menu/menu_1.png" id="2_xfuli"]
[ext_resource type="Texture2D" uid="uid://buvkfxac3dta3" path="res://resources/buttons/menu/menuPressed_1.png" id="3_gnbqa"]
[ext_resource type="PackedScene" uid="uid://ccd6sevfyp7qv" path="res://animations/won.tscn" id="5_bniqy"]

[node name="leaderboard" type="Node2D"]
z_index = 4
script = ExtResource("1_u3i5j")

[node name="background" type="ColorRect" parent="."]
offset_left = -282.0
offset_top = -172.0
offset_right = 285.0
offset_bottom = 167.0
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="score_label" type="Label" parent="."]
offset_left = -226.0
offset_top = -116.0
offset_right = 214.0
offset_bottom = -90.0
theme_override_fonts/font = ExtResource("1_nnrk0")
theme_override_font_sizes/font_size = 16
text = "enter name here [with score] to scoreboard?"
horizontal_alignment = 1

[node name="final score" type="Label" parent="score_label"]
layout_mode = 0
offset_left = 1.0
offset_top = 24.0
offset_right = 441.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("1_nnrk0")
theme_override_font_sizes/font_size = 16
text = "enter name here [with score] to scoreboard?"
horizontal_alignment = 1

[node name="death_label" type="Label" parent="."]
offset_left = -225.0
offset_top = -41.0
offset_right = 227.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 0.854902, 0.580392, 1)
theme_override_fonts/font = ExtResource("1_nnrk0")
theme_override_font_sizes/font_size = 24
text = "You have been slain by the humans!!
They have protected some of their knowledge
and will continue to grow smarter"
horizontal_alignment = 1

[node name="win_label" type="Label" parent="."]
visible = false
offset_left = -254.0
offset_top = -43.0
offset_right = 270.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(1, 0.854902, 0.580392, 1)
theme_override_fonts/font = ExtResource("1_nnrk0")
theme_override_font_sizes/font_size = 24
text = "You defeated the humans and consumed their books!
Humanity lost all their knowledge that day
good job!"
horizontal_alignment = 1

[node name="replay" type="TextureButton" parent="."]
offset_left = -220.0
offset_top = 59.0
offset_right = -83.0
offset_bottom = 120.0
rotation = -0.00735089
scale = Vector2(1.2, 1.2)
texture_normal = ExtResource("2_xfuli")
texture_pressed = ExtResource("3_gnbqa")

[node name="Label" type="Label" parent="replay"]
layout_mode = 0
offset_left = 11.5193
offset_top = 20.0852
offset_right = 132.519
offset_bottom = 50.0852
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("1_nnrk0")
text = "re-play (do later!!)"
horizontal_alignment = 1

[node name="menu" type="TextureButton" parent="."]
offset_left = 61.0
offset_top = 61.0
offset_right = 198.0
offset_bottom = 122.0
rotation = -0.00735089
scale = Vector2(1.2, 1.2)
texture_normal = ExtResource("2_xfuli")
texture_pressed = ExtResource("3_gnbqa")

[node name="Label" type="Label" parent="menu"]
layout_mode = 0
offset_left = 18.6667
offset_top = 20.0
offset_right = 119.667
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("1_nnrk0")
text = "Menu"
horizontal_alignment = 1

[node name="won" parent="." instance=ExtResource("5_bniqy")]

[connection signal="pressed" from="replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
